<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/topPanel"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@color/purple_200"/>

        <LinearLayout
            android:id="@+id/alarmPanel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topPanel"
            android:layout_centerHorizontal="true"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="10dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dip">

                <TextView
                    android:id="@+id/txv_alarmTxt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dip"
                    android:text="@string/alarm"
                    android:textColor="@color/black_alpha"
                    android:textSize="32sp"
                    android:typeface="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dip">

                <TextView
                    android:id="@+id/txv_timeValue"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dip"
                    android:text="@string/time"
                    android:textColor="@color/black_alpha"
                    android:textSize="45sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txv_monTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_textview"
                    android:backgroundTint="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/mon"
                    android:textColor="@android:color/white"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/txv_tueTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_textview"
                    android:backgroundTint="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/tue"
                    android:textColor="@android:color/white"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/txv_wedTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_textview"
                    android:backgroundTint="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/wed"
                    android:textColor="@android:color/white"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/txv_thuTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_textview"
                    android:backgroundTint="@color/gray"
                    android:gravity="center"
                    android:text="@string/thu"
                    android:textColor="@android:color/white"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/txv_friTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_textview"
                    android:backgroundTint="@color/gray"
                    android:gravity="center"
                    android:text="@string/fri"
                    android:textColor="@android:color/white"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/txv_satTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_textview"
                    android:backgroundTint="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/sat"
                    android:textColor="@android:color/white"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/txv_sunTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_textview"
                    android:backgroundTint="@color/gray"
                    android:gravity="center"
                    android:text="@string/sun"
                    android:textColor="@android:color/white"
                    android:textSize="27sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnNew"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:layout_margin="10dp"
                android:fontFamily="monospace"
                android:padding="10dip"
                android:text="@string/newAlarm"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/musicPanel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/alarmPanel"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txv_alarmSound"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/alarmSound"
                android:textColor="@color/black_alpha"
                android:textSize="32dp"/>

            <Button
                android:id="@+id/btnFile"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="monospace"
                android:padding="10dip"
                android:text="@string/soundFile"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="148dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="bottom"
                android:background="@color/purple_200">
            </FrameLayout>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>