<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txv_myAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="Alarm Name"
                android:inputType="text"
                android:textColor="@color/black_alpha"
                android:textSize="45sp"
                android:typeface="monospace" />


            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/calendar_days_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeLayout01"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:padding="5dip">

            <TextView
                android:id="@+id/txv_monTxtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="@android:color/black"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/txv_tueTxtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/tue"
                android:textColor="@android:color/black"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/txv_wedTxtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/wed"
                android:textColor="@android:color/black"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/txv_thuTxtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/thu"
                android:textColor="@android:color/black"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/txv_friTxtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/fri"
                android:textColor="@android:color/black"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/txv_satTxtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/sat"
                android:textColor="@android:color/black"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/txv_sunTxtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textview"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/sun"
                android:textColor="@android:color/black"
                android:textSize="27sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calendar_days_of_week"
            android:layout_marginTop="80dp"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/btnSave"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:fontFamily="monospace"
                android:padding="10dip"
                android:layout_gravity="center"
                android:text="Save Alarm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>